# refly

./: .cursorrules  .dockerignore  .gitignore  .gitpod.yml  .npmrc  CONTRIBUTING.md  CONTRIBUTING_CN.md  LICENSE  README.md  README_CN.md  biome.json  cypress.config.ts  docker-compose.yml  package.json  pnpm-lock.yaml  rush.json  turbo.json
reflyd/: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pyproject.toml  tsconfig.json
reflyd/app/: .env  main.py
reflyd/app/models/: dto.py
reflyd/prisma/: schema.prisma
reflyd/scripts/: hybrid-search.ts
reflyd/src/: app.controller.ts  app.module.ts  main.ts  tracer.ts
reflyd/src/account/: account.module.ts  account.service.ts
reflyd/src/aigc/: aigc.controller.spec.ts  aigc.controller.ts  aigc.dto.ts  aigc.module.ts  aigc.service.spec.ts  aigc.service.ts  dto.ts
reflyd/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
reflyd/src/common/: common.module.ts  logger.service.ts  minio.service.ts  prisma.service.ts  puppeteer.service.ts  qdrant.service.ts  redis.service.ts  weaviate.dto.ts  weaviate.service.ts
reflyd/src/config/: app.config.ts
reflyd/src/conversation/: conversation.controller.ts  conversation.dto.ts  conversation.module.ts  conversation.service.ts  dto.ts
reflyd/src/digest/: digest.controller.spec.ts  digest.controller.ts  digest.module.ts  digest.service.spec.ts  digest.service.ts
reflyd/src/feed/: feed.controller.ts
reflyd/src/filters/: global-exception.filter.ts
reflyd/src/knowledge/: knowledge.controller.ts  (+4 more)
reflyd/views/: parse.hbs
(+1442 files in other folders)
