[tool.poetry]
name = "reflyd"
version = "0.1.0"
description = ""
authors = ["mrcfps <mrc@powerformer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.109.2"
llama-index = "^0.10.6"
uvicorn = "^0.27.1"
llama-index-readers-web = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
